--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.3",
     "redux-persist": "^6.0.0",
+    "uuid": "^11.1.0",
     "vite-plugin-pwa": "^0.21.1",
     "xlsx": "^0.18.5",
     "zod": "^3.25.28"
