feat: Add platform filtering and unified filters to Today's Orders page (#40)
* feat: Add platform filtering and unified filters to Today's Orders page

* feat: Facelift today's order page

* fix: update package name to match project identity

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-ui-vite-ts",
+  "name": "sacred-sutra-tools",
   "private": true,
   "version": "8.2.2",
   "type": "module",
