--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
     "test:watch:coverage": "npm run test:coverage -- --watch",
-    "test:ci": "npm run test -- --watchAll=false",
-    "test:critical": "NODE_ENV=test jest --config jest.critical.config.cjs",
-    "test:smoke": "NODE_ENV=test jest --config jest.smoke.config.cjs",
+    "test:ci": "npm run test -- --watchAll=false --verbose",
+    "test:ci:json": "npm run test -- --watchAll=false --json --outputFile=test-results.json",
+    "test:critical": "NODE_ENV=test jest --config jest.critical.config.cjs --verbose",
+    "test:smoke": "NODE_ENV=test jest --config jest.smoke.config.cjs --verbose",
     "test:changed": "npm run test:ci -- --onlyChanged",
     "test:related": "npm run test:ci -- --findRelatedTests --passWithNoTests",
     "test:fast": "npm run test:critical && npm run test:smoke",
