--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,8 @@ jobs:
     name: 🧪 Test Suite
     runs-on: ubuntu-latest
     needs: setup
+    outputs:
+      summary: ${{ steps.test-results.outputs.summary }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -270,7 +272,7 @@ jobs:
   pr-status:
     name: 📊 PR Status Summary
     runs-on: ubuntu-latest
-    needs: [type-check, lint, test, build]
+    needs: [setup, type-check, lint, test, build]
     if: always() && github.event_name == 'pull_request'
     steps:
       - name: Check Status
@@ -293,13 +295,18 @@ jobs:
             summary += '|-------|--------|--------|\n';
 
             jobs.forEach(job => {
-              const statusIcon = job.result === 'success' ? '✅' : 
-                               job.result === 'skipped' ? '⏭️' : 
-                               job.result === 'failure' ? '❌' : '⚠️';
+              // Handle empty/undefined results
+              const result = job.result || 'unknown';
               
-              summary += `| ${job.icon} ${job.name} | ${statusIcon} | \`${job.result}\` |\n`;
+              const statusIcon = result === 'success' ? '✅' : 
+                               result === 'skipped' ? '⏭️' : 
+                               result === 'failure' ? '❌' : 
+                               result === 'cancelled' ? '⚪' : '⚠️';
               
-              if (job.result !== 'success' && job.result !== 'skipped') {
+              summary += `| ${job.icon} ${job.name} | ${statusIcon} | \`${result}\` |\n`;
+              
+              // Only consider success and skipped as passing
+              if (result !== 'success' && result !== 'skipped') {
                 allPassed = false;
               }
             });
@@ -307,8 +314,8 @@ jobs:
             summary += '\n';
 
             // Test results details from the test job
-            const testSummary = '${{ steps.test-results.outputs.summary }}';
-            if (testSummary && testSummary !== '') {
+            const testSummary = '${{ needs.test.outputs.summary }}';
+            if (testSummary && testSummary !== '' && testSummary !== 'undefined') {
               summary += testSummary + '\n\n';
             }
 
