--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
     "test:related": "npm run test:ci -- --findRelatedTests --passWithNoTests",
     "test:fast": "npm run test:critical && npm run test:smoke",
     "test:storage-rules": "firebase emulators:exec --only storage \"npm run test\"",
+    "test:inventory:pre": "firebase emulators:exec --only firestore \"node scripts/test-inventory-removal.js pre-removal\"",
+    "test:inventory:post": "firebase emulators:exec --only firestore \"node scripts/test-inventory-removal.js post-removal\"",
+    "test:inventory:seed": "firebase emulators:exec --only firestore \"node scripts/test-inventory-removal.js seed\"",
+    "test:inventory:cleanup": "firebase emulators:exec --only firestore \"node scripts/test-inventory-removal.js cleanup\"",
+    "test:inventory:integration": "NODE_ENV=test jest src/__tests__/inventory-removal-integration.test.ts --verbose",
+    "migrate:inventory:dry-run": "firebase emulators:exec --only firestore \"node scripts/migrate-remove-inventory.js dry-run\"",
+    "migrate:inventory:run": "firebase emulators:exec --only firestore \"node scripts/migrate-remove-inventory.js run\"",
+    "migrate:inventory:backup": "firebase emulators:exec --only firestore \"node scripts/migrate-remove-inventory.js backup\"",
+    "migrate:inventory:validate": "firebase emulators:exec --only firestore \"node scripts/migrate-remove-inventory.js validate\"",
     "pre-commit": "lint-staged",
     "prepare": "husky",
     "changeset": "changeset",
@@ -111,6 +120,7 @@
     "dotenv": "^16.5.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
+    "firebase-admin": "^13.5.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
