--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/recharts": "^2.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
+    "formik": "^2.4.6",
     "gh-pages": "^6.2.0",
     "jspdf": "^3.0.1",
     "papaparse": "^5.4.1",
@@ -80,6 +81,7 @@
     "redux-persist": "^6.0.0",
     "vite-plugin-pwa": "^0.21.1",
     "xlsx": "^0.18.5",
+    "yup": "^1.7.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
