--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@mui/x-date-pickers": "^8.4.0",
     "@reduxjs/toolkit": "^2.8.1",
     "@types/jspdf": "^1.3.3",
+    "@types/qrcode": "^1.5.5",
     "@types/recharts": "^2.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
@@ -77,7 +78,8 @@
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^2.16.105",
-    "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.4",
+    "quagga": "^0.12.1",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.56.4",
