--- a/package.json
+++ b/package.json
@@ -67,15 +67,19 @@
     "@mui/x-date-pickers": "^8.4.0",
     "@reduxjs/toolkit": "^2.8.1",
     "@types/jspdf": "^1.3.3",
+    "@types/qrcode": "^1.5.5",
     "@types/recharts": "^2.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "formik": "^2.4.6",
     "gh-pages": "^6.2.0",
+    "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.1",
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^2.16.105",
+    "qrcode": "^1.5.4",
+    "quagga": "^0.12.1",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.56.4",
@@ -101,6 +105,7 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/jsbarcode": "^3.11.4",
     "@types/node": "^22.15.21",
     "@types/node-fetch": "^2.6.12",
     "@types/papaparse": "^5.3.15",
