--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "9.11.2",
   "type": "module",
-  "homepage": "https://himanshu31shr.github.io/flipkart-amazon-tools/",
+  "homepage": "https://tool.sacredsutra.in/",
   "scripts": {
     "dev": "concurrently --names \"SEED,VITE\" --prefix-colors \"bgBlue.bold,bgYellow.bold,bgGreen.bold\" \"npm run seed:wait-and-run\" \"npm run dev:wait-and-start\"",
     "dev:wait-and-start": "node -e \"setTimeout(() => process.exit(0), 5000)\" && cross-env VITE_FIREBASE_FIRESTORE_EMULATOR_HOST=localhost VITE_FIREBASE_FIRESTORE_EMULATOR_PORT=8080 VITE_FIREBASE_AUTH_EMULATOR_HOST=localhost VITE_FIREBASE_AUTH_EMULATOR_PORT=9099 VITE_FIREBASE_STORAGE_EMULATOR_HOST=localhost VITE_FIREBASE_STORAGE_EMULATOR_PORT=9199 vite",
