--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "test:related": "npm run test:ci -- --findRelatedTests --passWithNoTests",
     "test:fast": "npm run test:critical && npm run test:smoke",
     "test:storage-rules": "firebase emulators:exec --only storage \"npm run test\"",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:mobile": "playwright test --project='Mobile*'",
+    "test:e2e:debug": "playwright test --debug",
     "pre-commit": "lint-staged",
     "prepare": "husky",
     "changeset": "changeset",
@@ -117,6 +122,7 @@
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.5",
     "@eslint/js": "^9.17.0",
+    "@playwright/test": "^1.55.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
