--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,7 +131,7 @@ jobs:
 
           This release has been automatically deployed to production.
           
-          🌐 **Live URL**: https://himanshu31shr.github.io/flipkart-amazon-tools/
+          🌐 **Live URL**: https://tool.sacredsutra.in/
           
           ## Assets
           
